--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "marked": "^11.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "marked": "^11.1.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "dotenv": "^17.2.3",
     "vite": "^5.0.8"
   }
 }
-
